@@ -1,6 +1,6 @@
 bin_PROGRAMS = kmdr-executor
 
-kmdr_executor_SOURCES =  instance.cpp main.cpp
+kmdr_executor_SOURCES =  instance.cpp main.cpp dcopkommanderif.skel
 kmdr_executor_LDADD   = $(top_builddir)/kommander/widgets/libkommanderwidgets.la $(top_builddir)/kommander/factory/libkommanderfactory.la  $(LIB_KIO)
 
 KDE_ICON = kmdr-executor
@@ -14,3 +14,4 @@ METASOURCES = AUTO
 # the library search path.
 kmdr_executor_LDFLAGS = $(all_libraries) $(KDE_RPATH)
 
+noinst_HEADERS =  dcopkommanderif.h
